[package]
name = "molksite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = [] }
dparse = { git = "https://github.com/Molkars/dparse.git", version = "0.1.7" }
dparse-derive = { git = "https://github.com/Molkars/dparse-derive.git", version = "0.1.1" }
#dparse-derive = { path = "../dparse-derive" }
macros = { version = "0.1.0", path = "./macros" }
tiny_http = "0.12.0"
tokio = { version = "1.34.0", features = ["full"] }

[workspace]
members = ["macros"]
