[package]
name = "molksite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = [] }
async-trait = "*"
bytes = "*"
#dparse = { git = "https://github.com/Molkars/dparse.git", version = "0.1.8", features = ["track_caller"] }
dparse = { path = "../dparse" }
#dparse-derive = { git = "https://github.com/Molkars/dparse-derive.git", version = "0.1.1" }
dparse-derive = { path = "../dparse-derive" }
h2 = "0.4.0"
http = "*"
#dparse-derive = { path = "../dparse-derive" }
macros = { version = "0.1.0", path = "./macros" }
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[workspace]
members = ["macros"]
