[package]
name = "molksite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = [] }
async-trait = "*"
bytes = "*"
dparse = { git = "https://github.com/Molkars/dparse.git", version = "0.2.0" }
#dparse = { path = "../dparse" }
dparse-derive = { git = "https://github.com/Molkars/dparse-derive.git", version = "0.2.0" }
dparse-html = { git = "https://github.com/Molkars/dparse-html.git", version = "0.1.0" }
#dparse-derive = { path = "../dparse-derive" }
hyper = { version = "1.0.1", features = ["http1", "server"] }
http = "*"
macros = { version = "0.1.0", path = "./macros" }
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
http-body-util = "0.1.0"
hyper-util = { version = "0.1.0", features = ["tokio"] }

[workspace]
members = ["macros"]
